talk qwerty to me

--- a/index.html
+++ b/index.html
@@ -1,27 +1,52 @@
 <!DOCTYPE html>
-<html lang="en" id="wave">
+<html lang="en" id="@">
 <meta charset="utf-8">
   
-<title>yoisho mural</title>
+<title>typing mural</title>
 
 <meta name="viewport" content="width=device-width">
 <meta name="color-scheme" content="dark light">
-<meta name="description" content="yoisho emoji art oompf">
-<meta name="theme-color" content="#bae">
-<meta name="creator" content="🫟">
+<meta name="description" content="personal contenteditable drafty space above violet atmosphere">
+<meta name="theme-color" content="rebeccapurple">
+<meta name="creator" content="💗">
 
 <link rel="stylesheet" href="hum.css" media="all">
 <link rel="stylesheet" href="hue.css" media=(color)>
 <link rel="alternate" href="#wave">
-<link rel="next" href="https://webmural.com/snowprayer">
-<link rel="prev" href="https://webmural.com/phantombra">
+
+<link rel href="https://s9a.page/violet">
+<link rel href="https://s9a.page/purple">
+<link rel href="https://p9e.page/purple">
+<link rel href="https://s9a.page/snooze">
+<link rel href="https://webmural.com/snowprayer">
+<link rel href="https://webmural.com/yoisho">
+<link rel href="https://webmural.com/twinsofthenite">
 
 <article>
-  <h1 style="font-size:1em"><i lang="ja">yoisho</i></h1>
-  <dl>
-    <dt style="font-size:max(1.6em, 1vw)"><kbd>y🪀ish🪩</kbd>
-    <dd style="font-size:max(2.6em, 2vw)"><a href="https://webmural.com/mpf">🟠🟣mpf</a>
-    <dd style="font-size:max(2.6em, 3vw);writing-mode:vertical-rl"><a href="https://webmural.com/pinecone">🌏🌎🌍</a>  
-    <dd style="font-size:max(3.6em, 3vw)"><a href="https://webmural.com/fmh">🫟</a>
-  </dl>
+  <h1 contenteditable>typing</h1>
+  <label>
+    <em contenteditable>
+      feel free to type for ultraviolet fun and beyond.
+      formless draft space :)
+    </em>
+    <textarea contenteditable>
+      welcome to our typing mural :)
+      an extravaganza of contenteditable HTML elements.
+    </textarea>
+  </label>
+  <aside id="p">
+    <h2 contenteditable>
+      <code>p</code>
+    </h2>
+    <p contenteditable>
+      yes, like the purple in your pajamas
+      omg,..
+    </p>
+  </aside>
+  <footer id="goofy">
+    <h3 contenteditable>perfec<sub>tp</sub><sup>air</sup></h3>
+    <p contenteditable>pumpupthe morf <a href="/">webmural</a>/<kbd>bpmshazam</kbd>
+    <p contenteditable>qwerty kewl, huh
+    <p contenteditable>thank you and enjoy :)
+  </footer>
 </article>
